--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+ballbeam/configuration/
+ballbeam/*.pyd
+
+# PyCharm
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -112,6 +118,3 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
-# PyCharm
-.idea/
