add more types packages to mypy config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,12 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies:
-          [types-requests, types-setuptools, pandas-stubs]
+          [
+            types-requests,
+            types-setuptools,
+            types-keyboard,
+            types-pyserial,
+            pandas-stubs,
+          ]
         args: [--disallow-untyped-defs, --disallow-untyped-calls]
         files: ^ballbeam/
