add matplotlib stubs to mypy deps

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,7 @@ repos:
             types-setuptools,
             types-keyboard,
             types-pyserial,
+            matplotlib-stubs,
             pandas-stubs,
             PyQt5-stubs,
           ]
