--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements.in
 #
+asttokens==2.4.1
+    # via stack-data
 black==23.12.1
     # via -r requirements.in
 build==1.0.3
@@ -24,12 +26,21 @@ colorama==0.4.6
     # via
     #   build
     #   click
+    #   ipython
+comm==0.2.0
+    # via ipykernel
 contourpy==1.2.0
     # via matplotlib
 cycler==0.12.1
     # via matplotlib
+debugpy==1.8.0
+    # via ipykernel
+decorator==5.1.1
+    # via ipython
 distlib==0.3.8
     # via virtualenv
+executing==2.0.1
+    # via stack-data
 filelock==3.13.1
     # via virtualenv
 fonttools==4.47.0
@@ -38,18 +49,36 @@ gym==0.21.0
     # via -r requirements.in
 identify==2.5.33
     # via pre-commit
+ipykernel==6.28.0
+    # via -r requirements.in
+ipython==8.19.0
+    # via ipykernel
+jedi==0.19.1
+    # via ipython
+jupyter-client==8.6.0
+    # via ipykernel
+jupyter-core==5.5.1
+    # via
+    #   ipykernel
+    #   jupyter-client
 keyboard==0.13.5
     # via -r requirements.in
 kiwisolver==1.4.5
     # via matplotlib
 matplotlib==3.8.2
     # via -r requirements.in
+matplotlib-inline==0.1.6
+    # via
+    #   ipykernel
+    #   ipython
 mypy==1.8.0
     # via -r requirements.in
 mypy-extensions==1.0.0
     # via
     #   black
     #   mypy
+nest-asyncio==1.5.8
+    # via ipykernel
 nodeenv==1.8.0
     # via pre-commit
 numpy==1.26.2
@@ -68,7 +97,10 @@ packaging==23.2
     # via
     #   black
     #   build
+    #   ipykernel
     #   matplotlib
+parso==0.8.3
+    # via jedi
 pathspec==0.12.1
     # via black
 pillow==10.1.0
@@ -78,15 +110,24 @@ pip-tools==7.3.0
 platformdirs==4.1.0
     # via
     #   black
+    #   jupyter-core
     #   virtualenv
 pre-commit==3.6.0
     # via -r requirements.in
+prompt-toolkit==3.0.43
+    # via ipython
+psutil==5.9.7
+    # via ipykernel
+pure-eval==0.2.2
+    # via stack-data
 pycparser==2.21
     # via cffi
 pygit2==1.13.3
     # via -r requirements.in
 pyglet==1.5.27
     # via -r requirements.in
+pygments==2.17.2
+    # via ipython
 pyparsing==3.1.1
     # via matplotlib
 pyproject-hooks==1.0.0
@@ -102,9 +143,17 @@ pyqtgraph==0.13.3
 pyserial==3.5
     # via -r requirements.in
 python-dateutil==2.8.2
-    # via matplotlib
+    # via
+    #   jupyter-client
+    #   matplotlib
+pywin32==306
+    # via jupyter-core
 pyyaml==6.0.1
     # via pre-commit
+pyzmq==25.1.2
+    # via
+    #   ipykernel
+    #   jupyter-client
 qdldl==0.1.7.post0
     # via osqp
 ruamel-yaml==0.17.40
@@ -119,11 +168,29 @@ scipy==1.11.4
     #   osqp
     #   qdldl
 six==1.16.0
-    # via python-dateutil
+    # via
+    #   asttokens
+    #   python-dateutil
+stack-data==0.6.3
+    # via ipython
+tornado==6.4
+    # via
+    #   ipykernel
+    #   jupyter-client
+traitlets==5.14.0
+    # via
+    #   comm
+    #   ipykernel
+    #   ipython
+    #   jupyter-client
+    #   jupyter-core
+    #   matplotlib-inline
 typing-extensions==4.9.0
     # via mypy
 virtualenv==20.25.0
     # via pre-commit
+wcwidth==0.2.12
+    # via prompt-toolkit
 wheel==0.38.4
     # via
     #   -r requirements.in
