--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,9 @@ attrs==23.2.0
     # via
     #   jsonschema
     #   referencing
-black==23.12.1
+black==24.2.0
     # via -r requirements.in
-build==1.0.3
+build==1.1.1
     # via pip-tools
 cffi==1.16.0
     # via pygit2
@@ -24,20 +24,20 @@ click==8.1.7
     #   pip-tools
 cloudpickle==3.0.0
     # via gym
-cmake==3.28.1
+cmake==3.28.3
     # via -r requirements.in
 colorama==0.4.6
     # via
     #   build
     #   click
     #   ipython
-comm==0.2.0
+comm==0.2.1
     # via ipykernel
 contourpy==1.2.0
     # via matplotlib
 cycler==0.12.1
     # via matplotlib
-debugpy==1.8.0
+debugpy==1.8.1
     # via ipykernel
 decorator==5.1.1
     # via ipython
@@ -49,25 +49,25 @@ fastjsonschema==2.19.1
     # via nbformat
 filelock==3.13.1
     # via virtualenv
-fonttools==4.47.0
+fonttools==4.49.0
     # via matplotlib
 gym==0.21.0
     # via -r requirements.in
-identify==2.5.33
+identify==2.5.35
     # via pre-commit
-ipykernel==6.28.0
+ipykernel==6.29.3
     # via -r requirements.in
-ipython==8.19.0
+ipython==8.22.2
     # via ipykernel
 jedi==0.19.1
     # via ipython
-jsonschema==4.20.0
+jsonschema==4.21.1
     # via nbformat
 jsonschema-specifications==2023.12.1
     # via jsonschema
 jupyter-client==8.6.0
     # via ipykernel
-jupyter-core==5.5.1
+jupyter-core==5.7.1
     # via
     #   ipykernel
     #   jupyter-client
@@ -76,13 +76,13 @@ keyboard==0.13.5
     # via -r requirements.in
 kiwisolver==1.4.5
     # via matplotlib
-matplotlib==3.8.2
+matplotlib==3.8.3
     # via -r requirements.in
 matplotlib-inline==0.1.6
     # via
     #   ipykernel
     #   ipython
-mypy==1.8.0
+mypy==1.9.0
     # via -r requirements.in
 mypy-extensions==1.0.0
     # via
@@ -90,11 +90,11 @@ mypy-extensions==1.0.0
     #   mypy
 nbformat==5.9.2
     # via -r requirements.in
-nest-asyncio==1.5.8
+nest-asyncio==1.6.0
     # via ipykernel
 nodeenv==1.8.0
     # via pre-commit
-numpy==1.26.2
+numpy==1.26.4
     # via
     #   -r requirements.in
     #   contourpy
@@ -105,68 +105,72 @@ numpy==1.26.2
     #   pyqtgraph
     #   qdldl
     #   scipy
-osqp==0.6.3
+osqp==0.6.5
     # via -r requirements.in
-packaging==23.2
+packaging==24.0
     # via
     #   black
     #   build
     #   ipykernel
     #   matplotlib
     #   plotly
-pandas==2.0.3
+pandas==2.2.1
     # via -r requirements.in
 parso==0.8.3
     # via jedi
 pathspec==0.12.1
     # via black
 pillow==10.2.0
-    # via matplotlib
-pip-tools==7.3.0
+    # via
+    #   -r requirements.in
+    #   matplotlib
+pip-tools==7.4.1
     # via -r requirements.in
-platformdirs==4.1.0
+platformdirs==4.2.0
     # via
     #   black
     #   jupyter-core
     #   virtualenv
-plotly==5.18.0
+plotly==5.19.0
     # via -r requirements.in
-pre-commit==3.6.0
+pre-commit==3.6.2
     # via -r requirements.in
 prompt-toolkit==3.0.43
     # via ipython
-psutil==5.9.7
+psutil==5.9.8
     # via ipykernel
 pure-eval==0.2.2
     # via stack-data
 pycparser==2.21
     # via cffi
-pygit2==1.13.3
+pygit2==1.14.1
     # via -r requirements.in
 pyglet==1.5.27
     # via -r requirements.in
 pygments==2.17.2
     # via ipython
-pyparsing==3.1.1
+pyparsing==3.1.2
     # via matplotlib
 pyproject-hooks==1.0.0
-    # via build
+    # via
+    #   build
+    #   pip-tools
 pyqt5==5.15.10
     # via -r requirements.in
 pyqt5-qt5==5.15.2
     # via pyqt5
 pyqt5-sip==12.13.0
     # via pyqt5
-pyqtgraph==0.13.3
+pyqtgraph==0.13.4
     # via -r requirements.in
 pyserial==3.5
     # via -r requirements.in
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
     # via
     #   jupyter-client
     #   matplotlib
     #   pandas
-pytz==2023.3.post1
+pytz==2024.1
     # via pandas
 pywin32==306
     # via jupyter-core
@@ -178,11 +182,11 @@ pyzmq==25.1.2
     #   jupyter-client
 qdldl==0.1.7.post0
     # via osqp
-referencing==0.32.0
+referencing==0.33.0
     # via
     #   jsonschema
     #   jsonschema-specifications
-rpds-py==0.16.2
+rpds-py==0.18.0
     # via
     #   jsonschema
     #   referencing
@@ -190,7 +194,7 @@ ruamel-yaml==0.17.40
     # via -r requirements.in
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
-ruff==0.1.9
+ruff==0.3.2
     # via -r requirements.in
 scipy==1.11.4
     # via
@@ -209,7 +213,7 @@ tornado==6.4
     # via
     #   ipykernel
     #   jupyter-client
-traitlets==5.14.0
+traitlets==5.14.1
     # via
     #   comm
     #   ipykernel
@@ -218,13 +222,13 @@ traitlets==5.14.0
     #   jupyter-core
     #   matplotlib-inline
     #   nbformat
-typing-extensions==4.9.0
+typing-extensions==4.10.0
     # via mypy
-tzdata==2023.4
+tzdata==2024.1
     # via pandas
-virtualenv==20.25.0
+virtualenv==20.25.1
     # via pre-commit
-wcwidth==0.2.12
+wcwidth==0.2.13
     # via prompt-toolkit
 wheel==0.38.4
     # via
