--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,7 @@
 numpy
 scipy
 pandas
-pillow
+pillow>=10.3.0
 matplotlib
 plotly
 pyqtgraph
@@ -26,7 +26,7 @@ pygit2
 ipykernel
 nbformat
 pre-commit
-black
+black>=24.3.0
 ruff
 mypy
 pip-tools
